Add Uri Loader SPI