@@ -1,20 +1,27 @@
 package io.avaje.config;
 
-import java.util.Collections;
 import java.util.List;
 
 final class CoreComponents {
 
   private final ModificationEventRunner runner;
   private final ConfigurationLog log;
-  private final Parsers parsers;
+  private final ConfigParsers parsers;
+  private final URILoaders uriLoaders;
   private final List<ConfigurationSource> sources;
   private final List<ConfigurationPlugin> plugins;
 
-  CoreComponents(ModificationEventRunner runner, ConfigurationLog log, Parsers parsers, List<ConfigurationSource> sources, List<ConfigurationPlugin> plugins) {
+  CoreComponents(
+      ModificationEventRunner runner,
+      ConfigurationLog log,
+      ConfigParsers parsers,
+      URILoaders uriLoaders,
+      List<ConfigurationSource> sources,
+      List<ConfigurationPlugin> plugins) {
     this.runner = runner;
     this.log = log;
     this.parsers = parsers;
+    this.uriLoaders = uriLoaders;
     this.sources = sources;
     this.plugins = plugins;
   }
@@ -23,13 +30,18 @@ final class CoreComponents {
   CoreComponents() {
     this.runner = new CoreConfiguration.ForegroundEventRunner();
     this.log = new DefaultConfigurationLog();
-    this.parsers = new Parsers(Collections.emptyList());
-    this.sources = Collections.emptyList();
-    this.plugins = Collections.emptyList();
+    this.parsers = new ConfigParsers(List.of());
+    this.uriLoaders = new URILoaders(List.of());
+    this.sources = List.of();
+    this.plugins = List.of();
   }
 
-  Parsers parsers() {
+  ConfigParsers parsers() {
     return parsers;
+  }
+
+  public URILoaders uriLoaders() {
+    return uriLoaders;
   }
 
   ConfigurationLog log() {
